tests/errors/fun-arrow-body/errors.snap
---
source: tests/errors.rs
expression: output
---
error[E0026]: Unexpected token (a '='). Expected a '{'.
  │
  ├─𜱶 help: function literals use a brace body and no arrow: `fun x { x + 1 }`.
  │
2 │ def f = fun x => x + 1
  │               ^
  ╰─𜱶 tests/errors/fun-arrow-body/main.pa:2:15
